# HermesCAD

./: .env.example  .gitignore  DEMO_SCRIPT.md  LIMITATIONS.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  pyproject.toml  requirements.txt
docs/: architecture.md  freecad_mcp.md  future_work.md  mvp_scope.md  workflow.md
examples/assemblies/: README.md
examples/drawings/: README.md  actuator_plate_advanced.dxf  assembly_base_plate_threaded.dxf  assembly_cover_plate_clearance.dxf  bracket_simple.dxf  dogbone_link_complex.dxf  mount_plate_complex.dxf  nested_pocket_island_complex.dxf
examples/requests/: example_advanced_part_request.txt  example_advanced_targeted_holes_request.txt  example_complex_profile_request.txt  example_cover_plate_request.txt  example_email_request.txt  example_threaded_base_request.txt  (+1 more)
freecad_scripts/: create_assembly_from_parts.py  create_plate_from_dxf.py  create_preview.py  edit_hole_diameter.py  export_step_stl_fcstd.py  validate_freecad_model.py
hermescad/: __init__.py  assembly.py  conversion.py  freecad.py  inspection.py  models.py  packaging.py  pipeline.py  planning.py  preview.py  reporting.py
scripts/: _bootstrap.py  convert_dwg_to_dxf.py  export_outputs.py  generate_freecad_model.py  generate_report.py  inspect_dxf.py  package_outputs.py  process_assembly_request.py  process_cad_request.py  run_local_demo.py
tests/: test_assembly_manifest.py  test_dxf_inspection.py  test_feature_planning.py  test_freecad_runtime.py  test_packaging.py  test_pipeline.py  test_preview_export.py  test_report_generation.py
(+4 files in other folders)
